# n-ParT

./: Makefile  README.md  pyproject.toml  setup.py
docs/: mkdocs.yml
docs/docs/: index.md
n_part/: features.py
n_part/modeling/: predict.py
ngpt-main/: LICENSE  LICENSES.md  README.md  configurator-Copy1.py  launcher.sh  model.py  train.py
src/: ParT_norm.py  __init__.py  benchmarks.py  check_normalization.py  dataset.py  inference_benchmark.py  model.py  plots.py  train.py
src/data_processing/: make_dataset.py
src/dataset/: ParticleDataset.py
src/modeling/: check-norm-pod.yaml  molan-job.yml  molan-pod.yml  new-pvc.yaml  pvc.yaml  train.py
trial-0/: logfile.txt
trial-1/: logfile.txt
