[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "n_part"
version = "0.0.1"
description = "Normalized Particle Transformer (n-ParT) for faster training and inference"
authors = [
  { name = "Zihan Zhao, Molan Li, Javier Duarte" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["n_part"]
force_sort_within_sections = true
